--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,11 @@
 {
   "Ключ": "Ключ",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Страница не найдена": "Страница не найдена",
+  "toggle": "toggle",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "throwError": "throwError",
+  "Home": "Home",
+  "About": "About"
 }
