--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
   "Обновить страницу": "Обновить страницу",
   "throwError": "throwError",
   "Home": "Home",
-  "About": "About"
+  "About": "About",
+  "Короткий язык": "En"
 }
