--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "throwError": "throwError",
-  "Home": "Home",
-  "About": "About"
+  "Home": "Главная",
+  "About": "О сайте",
+  "Короткий язык": "Ru"
 }
