add loginform,input,user entity

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,10 @@
   "throwError": "throwError",
   "Home": "Главная",
   "About": "О сайте",
-  "Короткий язык": "Ru"
+  "Короткий язык": "Ru",
+  "Введите имя": "Введите имя",
+  "Введите пароль": "Введите пароль",
+  "Войти": "Войти",
+  "increment": "увеличить",
+  "decrement": "уменьшить"
 }
