--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,9 +4,14 @@
   "Страница не найдена": "Page not found",
   "toggle": "toggle",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Обновить страницу",
+  "Обновить страницу": "Refresh the page",
   "throwError": "throwError",
   "Home": "Home",
   "About": "About",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Введите имя": "Enter name",
+  "Введите пароль": "Enter password",
+  "Войти": "Login",
+  "increment": "increment",
+  "decrement": "decrement"
 }
